Merge GitHub repos with curated JSON; add fallback